<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue_0"
    tools:context=".view.createProfile.CreateProfileStep4Activity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/level_04"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/birthday_date"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_title"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <View
        android:id="@+id/view_header_profile"
        android:layout_width="0dp"
        android:layout_height="256dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_subtitle" />

    <ImageView
        android:id="@+id/imageview_banner_picture"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:contentDescription="@string/banner_profile"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@id/view_header_profile"
        app:layout_constraintStart_toStartOf="@id/view_header_profile"
        app:layout_constraintTop_toBottomOf="@+id/imageview_profile_picture"
        app:layout_constraintTop_toTopOf="@id/view_header_profile" />

    <ImageView
        android:id="@+id/imageview_profile_picture"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="24dp"
        android:contentDescription="@string/profile_icon"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="@id/view_header_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        app:layout_constraintTop_toTopOf="@id/view_header_profile" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/user_profile_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/view_header_profile"
        app:layout_constraintTop_toBottomOf="@id/imageview_banner_picture" />

    <TextView
        android:id="@+id/text_label_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/subtitle_bio"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/view_header_profile"
        app:layout_constraintTop_toBottomOf="@id/text_name" />

    <TextView
        android:id="@+id/text_bio"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/bio_placeholder"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="@id/view_header_profile"
        app:layout_constraintStart_toStartOf="@id/view_header_profile"
        app:layout_constraintBottom_toBottomOf="@id/view_header_profile"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/button_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/date_select"
        android:textColorHint="@color/white"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_header_profile" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_show_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_age"
        android:layout_marginHorizontal="32dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/button_date"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:background="@drawable/button_gradient"
        android:drawablePadding="0dp"
        android:drawableTint="@color/white"
        android:fontFamily="@font/baloo_bhai_2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:layout_marginBottom="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/image_below"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/footer"
        android:scaleType="fitXY"
        android:src="@drawable/bottom_layout"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>