<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/primary_blue_1"
    android:padding="8dp"
    app:tabTextColor="@color/gray">


    <ImageView
        android:id="@+id/image_community_banner"
        android:layout_width="176dp"
        android:layout_height="176dp"
        android:contentDescription="@string/image_community_icon"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_communities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_community_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/community_name_row"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_community_banner" />

    <TextView
        android:id="@+id/text_count_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/community_members_row"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_community_title" />


</androidx.constraintlayout.widget.ConstraintLayout>