<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue_2"
    tools:context=".view.RegisterPostActivity">

    <TextView
        android:id="@+id/text_new_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/new_event_post"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="32dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/gray" />

    <EditText
        android:id="@+id/edit_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_new_post"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/placeholder_post"
        android:textColor="@color/white"
        android:inputType="text|textMultiLine"
        android:maxLines="4"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/edit_local"
        style="@style/PrimaryEditText"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@id/edit_post"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:autofillHints="username"
        android:gravity="center_vertical"
        android:hint="@string/edit_local"
        android:inputType="textPersonName">

    </EditText>

    <RelativeLayout
        android:id="@+id/layout_map"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/edit_local"
        android:layout_margin="36dp"
        app:layout_constraintTop_toBottomOf="@id/edit_local">


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_search"
        style="@style/PrimaryButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_save"
        android:layout_marginHorizontal="32dp"
        android:text="@string/button_search_string" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/baloo_bhai_2"
        android:padding="12dp"
        android:text="@string/button_text_save"
        android:textColor="@color/blue" />

</RelativeLayout>